[project]
name = "rodin-gen2-mcp-server"
version = "0.1.0"
description = "MCP Server for Rodin Gen-2 3D Generation API"
authors = [
    {name = "Igor Nazarov", email = "tigron.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
rodin-gen2-mcp = "rodin_gen2_server:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
